5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1758_1185.log
== TEST (2019-05-28 11:33:11) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99)
	print(i)
	soma = soma + 1
i = i + 1

print(soma)
-- ERROR:
File "XXXX", line 9
    if(x[i]>99)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:33:16) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
	print(i)
	soma = soma + 1
i = i + 1

print(soma)
-- ERROR:
File "XXXX", line 10
    print(i)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:33:19) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
i = i + 1

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:34:28) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
5.92467
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:34:29) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
5.67178
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:34:30) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
7.34253
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:34:31) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
8.62601
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:34:33) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
9.29448
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:34:34) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
10.9967
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:34:50) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
6.97317
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:34:53) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
7.31396
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:34:53) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
7.22177
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:34:54) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
6.42227
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:34:56) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
6.61872
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
Glicose:0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:34:57) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
8.10297
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
0
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
Glicose:0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:54:39) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:54:41) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
3.38317
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
2
4
3
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:00) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
6.48565
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:01) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
2.32329
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1758/1185/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:03) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
8.54159
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:04) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
8.02179
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:05) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
8.82638
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:07) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
9.24912
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:22) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
4.75337
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
0
2
4
3
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:25) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
8.20237
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:26) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
5.40401
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:26) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
5.69593
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:30) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
10.8039
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
2
4
3
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:55:32) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:38) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
8.30748
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:43) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
6.71293
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
Glicose:0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:43) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
6.29418
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
Glicose:1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
Glicose:0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:45) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
7.71199
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
Glicose:1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
Glicose:0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:55:46) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
6.90133
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
Glicose:1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
Glicose:0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:10:08) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
i = i + 1

print(soma)
-- EXECUTION TIME:
2191.35
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:10:08) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
i = i + 1

print(soma)
-- EXECUTION TIME:
2198.44
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:10:08) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
i = i + 1

print(soma)
-- EXECUTION TIME:
2191.22
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:11:04) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
i = i + 1

print(soma)
-- EXECUTION TIME:
2250.8
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:11:04) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
i = i + 1

print(soma)
-- EXECUTION TIME:
2251
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:11:04) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
i = i + 1

print(soma)
-- EXECUTION TIME:
2251.13
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:39:01) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- EXECUTION TIME:
0.439123
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:28:53) 
-- CODE:
from numpy import*

x = array(eval(input("Glicose:")))

i = 0
soma = 0

while(i < size(x)):
	if(x[i]>99):
		print(i)
		soma = soma + 1
	i = i + 1

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
